# PTZ-Calib

./: CMakeLists.txt  README.md  build.sh  install_deps.sh  run_ptzba_synthetic.sh  run_ptzba_worldcup14.sh  run_reloc_synthetic.sh  run_reloc_worldcup14.sh
cmake/: 3rdparty.cmake
scripts/: eval_synthetic.py  eval_worldcup.py
src/app/: CMakeLists.txt  run_ptz_ba.cc  run_ptz_ba.h  run_ptz_reloc.cc  run_ptz_reloc.h
src/core/: CMakeLists.txt  data_io.cc  data_io.h  flat_pair_map.h  krt_optimizer.cc  krt_optimizer.h  ptz_incremental_optimizer.cc  ptz_incremental_optimizer.h  ptzray_optimizer.cc  ptzray_optimizer.h  tracks.cc  tracks.h  types.cc  types.h  union_find.h
src/utils/: CMakeLists.txt  logging.cc  logging.h  os_path.cc  os_path.h
